--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -1,6 +1,5 @@
 <% include partials/head %>
 
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <div class="container-with-menu container">
 	<div class="row row-height">
 		<div class="menu col-3">
@@ -44,19 +43,20 @@
 						<input placeholder="Mot de passe (confirmation)" type="password" name="password2" id="password2" onkeyup="Validate.Password2(this);" required />
 						<span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
 
-						<div class="g-recaptcha" data-sitekey="6Ld8MaUZAAAAAOCR-6L6VcBgFJyBhFWWLnHPInJ9"></div>
+						<div class="recaptcha-wrapper"></div>
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 						<input type="submit" class="logbtn" value="Inscription" id="submit-register" />
 					</form>
 				</div>
 
 				<div class="form-slider-container sign-in-container">
-					<form class="form-slider" id="login-form" method="POST" action="/api/auth/login">
+					<form class="form-slider" id="login-form" method="POST" onsubmit="submitLogin(event)" action="/api/auth/login">
 						<h1 class="mb-3">Se connecter</h1>
-						<input placeholder="Email" type="email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required />
-						<input placeholder="Mot de passe" type="password" name="password" required />
+						<input placeholder="Email" type="email" id="login-email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required />
+						<input placeholder="Mot de passe" type="password" id="login-pw" name="password" required />
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+						<div class="recaptcha-wrapper"></div>
 						<input type="submit" class="logbtn" value="Connexion" id="submit-login" />
 					</form>
 				</div>
@@ -85,11 +85,12 @@
 						<h2>Récupération de mot de passe</h2>
 						<h6>Nous vous enverrons un <b>mail</b> pour réinitaliser votre mot de passe</h6>
 					</div>
-					<form class="col-8 offset-2" id="lostpw" method="POST" action="/api/user/lostpw">
+					<form class="col-8 offset-2" id="lostpw" onsubmit="submitLostpw(event)" method="POST" action="/api/user/lostpw">
 						<input placeholder="Email" class="form-control-test" type="email" id="email-reset" name="email" value="" onkeyup="Validate.Email(this);" required />
 						<span id="i_email-reset" class="form-info">E-mail has to be valid</span>
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+						<div class="recaptcha-wrapper"></div>
 						<input type="submit" class="logbtn" value="Envoyer" id="submit-lostpw" />
 					</form>
 				</div>
@@ -98,6 +99,7 @@
 	</div>
 </div>
 
-<script src="/scripts/submit-register.js"></script>
+<script src="/scripts/submit-auth.js"></script>
+<script src="https://www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit" async defer></script>
 <script src="/scripts/frontValidation.js"></script>
 <% include partials/footer %>
